RESOLVED FIXED240007
RemoteImageBuffer ThreadSafeImageBufferFlusher hangs if GPU process crashes
https://bugs.webkit.org/show_bug.cgi?id=240007
Summary RemoteImageBuffer ThreadSafeImageBufferFlusher hangs if GPU process crashes
Kimmo Kinnunen
Reported 2022-05-03 06:54:23 PDT
RemoteImageBuffer ThreadSafeImageBufferFlusher hangs if GPU process crashes
Attachments
Patch (4.40 KB, patch)
2022-05-03 07:37 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2022-05-03 07:37:35 PDT
Radar WebKit Bug Importer
Comment 2 2022-05-03 07:37:44 PDT
Geoffrey Garen
Comment 3 2022-05-03 09:27:57 PDT
Comment on attachment 458742 [details] Patch r=me
EWS
Comment 4 2022-05-04 00:16:02 PDT
Committed r293764 (250243@main): <https://commits.webkit.org/250243@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458742 [details].
Note You need to log in before you can comment on or make changes to this bug.