Cherry-pick 90a69c545b4dfc7d14ca8962838d9863f09b5f61. rdar://91082903

RemoteImageBuffer ThreadSafeImageBufferFlusher hangs if GPU process crashes
    https://bugs.webkit.org/show_bug.cgi?id=240007

    Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-05-04
    Reviewed by Geoffrey Garen.

    RemoteResourceCacheProxy clears the RemoteImageBuffer backend when the
    GPUP is lost. Mark the flush as completed in this case, so that any pending
    off-thread flush waits can proceed.

    Make sure RemoteResourceCacheProxy clears the backends on destruction too,
    so that any pending flushes proceed in this case too.

    * WebProcess/GPU/graphics/RemoteImageBufferProxy.h:
    * WebProcess/GPU/graphics/RemoteResourceCacheProxy.cpp:
    (WebKit::RemoteResourceCacheProxy::~RemoteResourceCacheProxy):
    (WebKit::RemoteResourceCacheProxy::clearImageBufferBackends):
    (WebKit::RemoteResourceCacheProxy::remoteResourceCacheWasDestroyed):
    * WebProcess/GPU/graphics/RemoteResourceCacheProxy.h:

    Canonical link: https://commits.webkit.org/250243@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293764 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.668@safari-613-branch