Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.h
@@ -224,6 +224,7 @@ protected:
     void clearBackend() final
     {
         m_remoteDisplayList.resetNeedsFlush();
+        didFlush(m_sentFlushIdentifier);
         BaseConcreteImageBuffer::clearBackend();
     }
 
